--- a/src/styles.css
+++ b/src/styles.css
@@ -698,17 +698,17 @@ img {
     width: 100%;
     left: 276px; }
   .background .persons .person.pubg {
-    top: 118px !important;
+    top: 173px !important;
     width: 100%;
     max-width: 320px;
-    left: 383px !important; }
+    left: 398px !important; }
   .background .persons .person.jugg {
-    max-width: 200px;
-    left: 275px !important;
+    max-width: 205px;
+    left: 248px !important;
     top: 30px !important;
-    max-height: 885px; }
+    max-height: 15px; }
   .background .persons .person.tracer {
-    top: 126px !important;
+    top: 378px !important;
     right: inherit !important;
     width: 210px !important;
     left: 126px; }
@@ -734,146 +734,181 @@ img {
     height: 100%;
     max-height: 780px; }
     .content .text {
-      margin-top: 83px;
+      margin-top: 45px;
       height: 500px; }
-      .content .text .box-content:before {
-        position: absolute;
-        content: '';
-        border-bottom: 4px solid #f8ff13;
-        left: 490px;
-        top: 184px;
-        width: 18px;
-        height: 10px;
-        opacity: 0.9;
-        z-index: 1; }
       .content .text .box-content .title-sport__box {
-        background: url("../images/text/paybox-720.png") no-repeat;
-        max-width: 185px;
-        width: 100%;
-        max-height: 28px;
-        margin-left: 257px; }
+        max-width: 180px;
+        height: 26px;
+        margin-left: 261px;
+        margin-top: 40px; }
+        .content .text .box-content .title-sport__box::after {
+          width: 5px;
+          height: 5px;
+          right: 5px;
+          top: -1px; }
         .content .text .box-content .title-sport__box .title-sport {
-          padding: 6px;
-          font-size: 17px; }
-          .content .text .box-content .title-sport__box .title-sport:before {
-            height: 18px;
-            left: -9px;
-            width: 31px;
-            opacity: 0.5;
-            border-bottom: 1px solid #f8ff13; }
-          .content .text .box-content .title-sport__box .title-sport:after {
-            content: url("../images/text/cross-720.png");
-            top: 71px;
-            left: 0; }
-      .content .text .box-content .bonus-box:before {
-        top: 126px;
-        left: 295px;
-        width: 63px;
-        z-index: 1;
-        opacity: 0.4;
-        border-bottom: 1px solid #f8ff13; }
-      .content .text .box-content .bonus-box:after {
-        position: absolute;
-        content: '';
-        border-bottom: 7px solid #f8ff13;
-        left: 208px;
-        top: 58px;
-        width: 16px;
-        height: 10px;
-        opacity: 0.9; }
-      .content .text .box-content .bonus-box .letter-bonus {
-        content: url("../images/text/letter-bonus-resp.png");
-        left: 413px;
-        top: 107px;
-        width: 17px; }
-      .content .text .box-content .bonus-box .bonus-name {
-        margin-left: 210px;
-        font-size: 83px; }
-        .content .text .box-content .bonus-box .bonus-name:before {
-          top: 19px;
-          left: 221px;
-          width: 100px;
-          opacity: 0.4;
-          border-bottom: 1px solid #f8ff13; }
-        .content .text .box-content .bonus-box .bonus-name:after {
-          top: 35px;
-          width: 16px;
+          font-size: 16px;
+          letter-spacing: 0.5px;
+          line-height: 26px; }
+          .content .text .box-content .title-sport__box .title-sport::before {
+            width: 30px;
+            bottom: 2px;
+            height: 1px;
+            left: -11px;
+            background-color: #f8ff13;
+            opacity: 0.5; }
+      .content .text .box-content .bonus-box, .content .text .box-content h2 {
+        margin-top: 6px;
+        line-height: 62px !important; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.first, .content .text .box-content h2 .glitches-wrap .glitches > div.first {
+          width: 8px;
+          height: 8px;
+          left: 428px;
+          bottom: 5px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.second, .content .text .box-content h2 .glitches-wrap .glitches > div.second {
+          width: 8px;
+          height: 8px;
+          top: 43px;
+          left: 255px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.third, .content .text .box-content h2 .glitches-wrap .glitches > div.third {
+          left: 339px;
+          top: 17px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.four, .content .text .box-content h2 .glitches-wrap .glitches > div.four {
+          width: 35px;
+          left: 376px;
+          top: 49px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.five, .content .text .box-content h2 .glitches-wrap .glitches > div.five {
+          width: 15px;
+          height: 1px;
+          left: 452px;
+          bottom: 28px;
+          background: #d8de12;
+          opacity: 0.5; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.six, .content .text .box-content h2 .glitches-wrap .glitches > div.six {
+          top: 48px;
           left: 304px;
-          border-bottom: 3px solid #ffffff;
-          height: 20px; }
-      .content .text .box-content .bonus-box .bonus-price {
-        font-size: 83px;
-        transform: translate(296px, -20px); }
-        .content .text .box-content .bonus-box .bonus-price::before {
-          top: 39px;
-          left: 154px;
-          border-bottom: 7px solid #000000; }
-        .content .text .box-content .bonus-box .bonus-price::after {
-          border-bottom: 7px solid #000;
-          width: 32px;
-          top: 51px;
-          left: 151px; }
-      .content .text .letter-bonus__white {
-        top: 9px !important;
-        left: 205px !important;
-        background-size: cover;
-        max-width: 299px; }
-      .content .text .btn-registration {
-        background: url("../images/text/btn-registration-responsive.png") no-repeat;
-        background-size: cover;
+          width: 17px;
+          height: 2px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.seven, .content .text .box-content h2 .glitches-wrap .glitches > div.seven {
+          width: 25px;
+          height: 5px;
+          left: 478px;
+          bottom: 55px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.eight, .content .text .box-content h2 .glitches-wrap .glitches > div.eight {
+          height: 8px;
+          left: 199px;
+          top: 60px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.nine, .content .text .box-content h2 .glitches-wrap .glitches > div.nine {
+          width: 15px;
+          height: 7px;
+          left: 383px;
+          bottom: 54px; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.ten, .content .text .box-content h2 .glitches-wrap .glitches > div.ten {
+          top: 12px;
+          left: 219px;
+          width: 99px;
+          opacity: 0.5; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.eleven, .content .text .box-content h2 .glitches-wrap .glitches > div.eleven {
+          bottom: 4px;
+          left: 291px;
+          width: 67px;
+          opacity: 0.5; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.twelve, .content .text .box-content h2 .glitches-wrap .glitches > div.twelve {
+          display: none; }
+        .content .text .box-content .bonus-box .glitches-wrap .glitches > div.thirteen, .content .text .box-content h2 .glitches-wrap .glitches > div.thirteen {
+          width: 11px;
+          height: 11px;
+          left: 416px;
+          bottom: 24px; }
+        .content .text .box-content .bonus-box .bonus-name, .content .text .box-content h2 .bonus-name {
+          margin-left: 208px;
+          font-size: 83px; }
+        .content .text .box-content .bonus-box .bonus-price, .content .text .box-content h2 .bonus-price {
+          font-size: 83px;
+          margin-left: 293px; }
+      .content .text .box-content .info-box::before {
+        display: none; }
+      .content .text .box-content .info-box::after {
+        display: none; }
+      .content .text .box-content .info-box .registration-info {
+        font-size: 40px;
+        margin-left: 213px;
+        line-height: 0;
+        letter-spacing: normal;
+        margin-top: 16px; }
+      .content .text .box-content .btn-registration {
         width: 100%;
-        max-height: 63px !important;
-        margin-top: 180px;
-        max-width: 270px !important;
-        margin-left: 216px !important;
-        padding-top: 22px !important; }
-        .content .text .btn-registration .btn-link {
-          font-size: 21px !important;
-          margin-left: 47px !important;
-          letter-spacing: normal !important; }
-    .content .info-box:before {
-      background: url("../images/text/cross-720.png") no-repeat !important;
-      top: -44px !important;
-      left: 426px !important;
-      width: 8px !important;
-      height: 8px !important; }
-    .content .info-box::after {
-      left: 450px !important;
-      top: -70px !important;
-      border-bottom: 1px solid #f8ff13 !important;
-      opacity: 0.4; }
-    .content .info-box .registration-info {
-      font-size: 40px !important;
-      margin-left: 176px;
-      letter-spacing: normal !important;
-      margin-top: 16px; }
-  .steps {
-    margin-top: 45px; }
-    .steps .steps-wrap {
-      justify-content: center; }
-      .steps .steps-wrap .step {
-        width: 25%; }
-        .steps .steps-wrap .step .icon {
+        max-height: 63px;
+        margin-top: 245px;
+        max-width: 270px;
+        margin-left: 216px; }
+        .content .text .box-content .btn-registration::before {
+          left: calc(50% - 4px);
+          top: 0; }
+        .content .text .box-content .btn-registration::after {
+          top: 2px;
+          left: calc(50% - -3px); }
+        .content .text .box-content .btn-registration .title {
+          font-size: 20px;
+          line-height: 66px;
+          letter-spacing: 0.6px; }
+          .content .text .box-content .btn-registration .title::after {
+            background-image: none; }
+    .content .steps {
+      margin-bottom: 13vh;
+      padding: 0 90px 0 120px;
+      margin-left: 0; }
+      .content .steps .steps-wrap {
+        justify-content: center; }
+        .content .steps .steps-wrap .step:first-child .icon::before {
+          width: 8px;
+          height: 8px;
+          bottom: 1px;
+          right: 13px; }
+        .content .steps .steps-wrap .step:first-child .icon::after {
+          height: 33px;
+          width: 26px;
+          top: -3px;
+          left: 3px; }
+        .content .steps .steps-wrap .step:nth-child(2) .icon::before {
+          height: 8px;
+          width: 8px;
+          bottom: 8px;
+          left: 0; }
+        .content .steps .steps-wrap .step:nth-child(3) .icon::before {
+          height: 8px;
+          width: 8px;
+          bottom: 8px;
+          left: 0;
+          opacity: 0.4; }
+        .content .steps .steps-wrap .step:nth-child(3) .icon::after {
+          height: 31px;
+          width: 27px;
+          bottom: 2px;
+          left: 3px; }
+        .content .steps .steps-wrap .step .icon {
           width: 42px;
-          height: 35px;
-          margin-left: 35px; }
-          .steps .steps-wrap .step .icon .number {
-            line-height: 35px;
+          height: 35px; }
+          .content .steps .steps-wrap .step .icon .number {
+            line-height: 31px;
             font-size: 18px; }
-        .steps .steps-wrap .step .title {
+            .content .steps .steps-wrap .step .icon .number::before {
+              width: 35px;
+              height: 31px; }
+        .content .steps .steps-wrap .step .title {
           font-size: 16px; }
-        .steps .steps-wrap .step .icon-middle {
+        .content .steps .steps-wrap .step .icon-middle {
           width: 42px;
           height: 35px;
           margin-left: 20px; }
-          .steps .steps-wrap .step .icon-middle .number {
+          .content .steps .steps-wrap .step .icon-middle .number {
             line-height: 35px;
             font-size: 18px; }
-        .steps .steps-wrap .step .icon-last {
+        .content .steps .steps-wrap .step .icon-last {
           width: 42px;
           height: 35px;
           margin-right: 20px; }
-          .steps .steps-wrap .step .icon-last .number {
+          .content .steps .steps-wrap .step .icon-last .number {
             line-height: 35px;
             font-size: 18px; }
   .copyright-box {
@@ -897,8 +932,9 @@ img {
       width: 100%;
       height: 100%;
       background: url("../images/header/right-logo-720.png") no-repeat;
-      margin-left: 228px;
-      margin-top: 22px; }
+      position: absolute;
+      left: 33%;
+      top: 88%; }
     .responsive-section .container .copyright-box {
       justify-content: space-around;
       margin-right: 15px;
@@ -913,7 +949,7 @@ img {
       display: none; }
     .footer .right-col {
       display: none; }
-    .footer .center-clo {
+    .footer .center-col {
       display: none; }
     .footer .footer-responsive {
       display: flex;
@@ -979,7 +1015,7 @@ img {
           width: 15px;
           transform: translate(-13px, 14px); } }
 
-@media screen and (max-width: 555px) and (min-width: 320px) {
+@media screen and (max-width: 555px) {
   .container {
     max-width: 700px;
     margin: 0 auto; }
