--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,7 +26,7 @@ $mainBronze: #7f8300;
   }
 
   &::before {
-    background: url("../images/bg/background-over.jpg") no-repeat;
+    background: url("../images/bg/background-over-responsive.png") no-repeat;
     background-size: cover;
     z-index: 1;
   }
